# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./businesses";
 export * from "./workers";
 export * from "./subsidy_rounds";
 export * from "./notifications";
+export * from "./notification_settings";
